# otus5

./: Average.hpp  CMakeLists.txt  IStatistics.hpp  Max.hpp  Min.hpp  Percentile.cpp  Percentile.hpp  StandardDeviation.cpp  StandardDeviation.hpp  statistics.cpp
